--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 
-<h1>Funcionando</h1>
+<h1>Personajes de Star Wars</h1>
 
+<div *ngFor="let i of personajes">
+    <h2>Nombre: {{ i.Nombre }}</h2>
+
+    <p>Planeta de origen: {{ i.Planeta_Origen }}</p>
+    <p>Trilogia: {{ i.Trilogia }}</p>
+    <p>Raza: {{ i.Raza }}</p>
+    <p>Género: {{ i.Genero }}</p>
+    <p>Intérprete: {{ i.Interprete }}</p>
+</div>
